@@ -272,6 +272,10 @@ extern guint sound_options;
 #define OPT_SOUND_BEEP			0x00000400
 #define OPT_SOUND_CHAT_PART		0x00000800
 #define OPT_SOUND_CHAT_YOU_SAY		0x00001000
+#define OPT_SOUND_NORMAL		0x00002000
+#define OPT_SOUND_NAS			0x00004000
+#define OPT_SOUND_ARTSC			0x00008000
+#define OPT_SOUND_ESD			0x00010000
 
 #define BUDDY_ARRIVE 0
 #define BUDDY_LEAVE 1
